--- a/redirector/Dockerfile_old
+++ b/redirector/Dockerfile_old
@@ -8,6 +8,7 @@ RUN apt update
 RUN apt install -y libcurl4-openssl-dev pkg-config libssl-dev git
 RUN pecl install mongodb
 RUN echo 'extension=mongodb.so' > /usr/local/etc/php/php.ini
+
 RUN pecl config-set php_ini /usr/local/etc/php/php.ini
 
 # Enable modules
@@ -17,14 +18,7 @@ RUN a2enmod rewrite && a2enmod headers
 WORKDIR /var/www/html
 COPY . .
 RUN sed -i 's/80/8080/g' /etc/apache2/sites-available/000-default.conf /etc/apache2/ports.conf
-
-# Install dependencies as root
-RUN composer install
-# Switch to non-root user
-#USER www-data
-
+USER www-data
 EXPOSE 8080
-
 # Start server
-CMD apachectl -D FOREGROUND
-
+CMD composer install && apachectl -D FOREGROUND
